apps/base/nexus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
spec:
  type: ClusterIP
  selector:
    app: nexus
  ports:
    - name: http
      port: 8081
      targetPort: 8081
      protocol: TCP
    - name: docker
      port: 8082
      targetPort: 8082
      protocol: TCP
